Testing various ranking methods

--- a/GoKart Analysis.ipynb
+++ b/GoKart Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,6 +405,578 @@
    "metadata": {},
    "source": [
     "### Fastest laps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df1, df2, df3, df4],keys=[1,2,3,4], names=['Race Number']).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Race Number</th>\n",
+       "      <th>Lap</th>\n",
+       "      <th>Pat</th>\n",
+       "      <th>Jeremy</th>\n",
+       "      <th>Eric</th>\n",
+       "      <th>Ryan</th>\n",
+       "      <th>Arjun</th>\n",
+       "      <th>Sean</th>\n",
+       "      <th>Anthony</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.691</td>\n",
+       "      <td>30.547</td>\n",
+       "      <td>29.307</td>\n",
+       "      <td>28.189</td>\n",
+       "      <td>30.885</td>\n",
+       "      <td>24.962</td>\n",
+       "      <td>31.070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>21.895</td>\n",
+       "      <td>25.774</td>\n",
+       "      <td>25.726</td>\n",
+       "      <td>22.713</td>\n",
+       "      <td>25.368</td>\n",
+       "      <td>21.014</td>\n",
+       "      <td>25.553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>21.672</td>\n",
+       "      <td>25.448</td>\n",
+       "      <td>22.896</td>\n",
+       "      <td>22.318</td>\n",
+       "      <td>24.588</td>\n",
+       "      <td>21.419</td>\n",
+       "      <td>26.522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21.507</td>\n",
+       "      <td>25.176</td>\n",
+       "      <td>21.897</td>\n",
+       "      <td>22.793</td>\n",
+       "      <td>25.469</td>\n",
+       "      <td>21.624</td>\n",
+       "      <td>25.275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21.509</td>\n",
+       "      <td>25.241</td>\n",
+       "      <td>22.434</td>\n",
+       "      <td>22.250</td>\n",
+       "      <td>25.857</td>\n",
+       "      <td>21.503</td>\n",
+       "      <td>25.406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>4</td>\n",
+       "      <td>39</td>\n",
+       "      <td>20.337</td>\n",
+       "      <td>19.939</td>\n",
+       "      <td>20.309</td>\n",
+       "      <td>21.258</td>\n",
+       "      <td>21.709</td>\n",
+       "      <td>20.501</td>\n",
+       "      <td>21.441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>21.382</td>\n",
+       "      <td>21.134</td>\n",
+       "      <td>20.156</td>\n",
+       "      <td>20.647</td>\n",
+       "      <td>23.101</td>\n",
+       "      <td>22.762</td>\n",
+       "      <td>22.069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>19.981</td>\n",
+       "      <td>21.095</td>\n",
+       "      <td>20.139</td>\n",
+       "      <td>21.853</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.912</td>\n",
+       "      <td>23.511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>19.855</td>\n",
+       "      <td>19.852</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.928</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.108</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.900</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.459</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>160 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Race Number  Lap     Pat  Jeremy    Eric    Ryan   Arjun    Sean  Anthony\n",
+       "0              1    1  24.691  30.547  29.307  28.189  30.885  24.962   31.070\n",
+       "1              1    2  21.895  25.774  25.726  22.713  25.368  21.014   25.553\n",
+       "2              1    3  21.672  25.448  22.896  22.318  24.588  21.419   26.522\n",
+       "3              1    4  21.507  25.176  21.897  22.793  25.469  21.624   25.275\n",
+       "4              1    5  21.509  25.241  22.434  22.250  25.857  21.503   25.406\n",
+       "..           ...  ...     ...     ...     ...     ...     ...     ...      ...\n",
+       "155            4   39  20.337  19.939  20.309  21.258  21.709  20.501   21.441\n",
+       "156            4   40  21.382  21.134  20.156  20.647  23.101  22.762   22.069\n",
+       "157            4   41  19.981  21.095  20.139  21.853     NaN  21.912   23.511\n",
+       "158            4   42  19.855  19.852     NaN  21.928     NaN  24.108      NaN\n",
+       "159            4   43     NaN  19.900     NaN  23.459     NaN     NaN      NaN\n",
+       "\n",
+       "[160 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pat</th>\n",
+       "      <th>Jeremy</th>\n",
+       "      <th>Eric</th>\n",
+       "      <th>Ryan</th>\n",
+       "      <th>Arjun</th>\n",
+       "      <th>Sean</th>\n",
+       "      <th>Anthony</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pat  Jeremy  Eric  Ryan  Arjun  Sean  Anthony\n",
+       "1  1.0     6.0   3.0   7.0    4.0   2.0      5.0\n",
+       "2  6.0     4.0   5.0   1.0    2.0   3.0      7.0\n",
+       "3  6.0     1.0   3.0   4.0    7.0   2.0      5.0\n",
+       "4  3.0     1.0   5.0   2.0    7.0   4.0      6.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scripts.gokarts_race as kart_race\n",
+    "race = kart_race.Race()\n",
+    "rankings = race.get_race_ranking()\n",
+    "rankings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 15, 2: 12, 3: 10, 4: 9, 5: 8, 6: 7, 7: 6}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points = kart_race.Points()\n",
+    "points.mario_kart_points()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jeremy     46.0\n",
+       "Sean       43.0\n",
+       "Ryan       42.0\n",
+       "Pat        39.0\n",
+       "Eric       36.0\n",
+       "Arjun      33.0\n",
+       "Anthony    29.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rankings.replace(points.mario_kart_points()).sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jeremy     1.0\n",
+       "Sean       2.0\n",
+       "Ryan       3.0\n",
+       "Pat        4.0\n",
+       "Eric       5.0\n",
+       "Arjun      6.0\n",
+       "Anthony    7.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rankings.replace(points.mario_kart_points()).sum().rank(ascending=False).sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jeremy     70.0\n",
+       "Sean       63.0\n",
+       "Ryan       61.0\n",
+       "Pat        56.0\n",
+       "Eric       50.0\n",
+       "Arjun      42.0\n",
+       "Anthony    34.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rankings.replace(points.f1_position_points()).sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sean       25.0\n",
+       "Jeremy     24.0\n",
+       "Ryan       22.0\n",
+       "Pat        20.0\n",
+       "Eric       20.0\n",
+       "Arjun      16.0\n",
+       "Anthony    13.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rankings.replace(points.f1_sprint_points()).sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pat</th>\n",
+       "      <th>Jeremy</th>\n",
+       "      <th>Eric</th>\n",
+       "      <th>Ryan</th>\n",
+       "      <th>Arjun</th>\n",
+       "      <th>Sean</th>\n",
+       "      <th>Anthony</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27.448833</td>\n",
+       "      <td>28.969</td>\n",
+       "      <td>27.965486</td>\n",
+       "      <td>30.865375</td>\n",
+       "      <td>28.086286</td>\n",
+       "      <td>27.547528</td>\n",
+       "      <td>28.881647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23.784268</td>\n",
+       "      <td>23.539122</td>\n",
+       "      <td>23.624805</td>\n",
+       "      <td>23.136143</td>\n",
+       "      <td>23.267357</td>\n",
+       "      <td>23.485659</td>\n",
+       "      <td>23.801195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>26.8505</td>\n",
+       "      <td>24.985</td>\n",
+       "      <td>26.104703</td>\n",
+       "      <td>26.132784</td>\n",
+       "      <td>26.928556</td>\n",
+       "      <td>25.367974</td>\n",
+       "      <td>26.196946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23.128548</td>\n",
+       "      <td>22.61686</td>\n",
+       "      <td>23.389488</td>\n",
+       "      <td>22.806837</td>\n",
+       "      <td>24.458875</td>\n",
+       "      <td>23.3305</td>\n",
+       "      <td>23.91378</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Pat     Jeremy       Eric       Ryan      Arjun       Sean    Anthony\n",
+       "1  27.448833     28.969  27.965486  30.865375  28.086286  27.547528  28.881647\n",
+       "2  23.784268  23.539122  23.624805  23.136143  23.267357  23.485659  23.801195\n",
+       "3    26.8505     24.985  26.104703  26.132784  26.928556  25.367974  26.196946\n",
+       "4  23.128548   22.61686  23.389488  22.806837  24.458875    23.3305   23.91378"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race.get_average_lap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Race:\n",
+    "    def __init__(self, race_number):\n",
+    "        self.race_number = race_number\n",
+    "        self.race_results = pd.read_excel('data/processed/Manual times.xlsx', sheet_name='Race ' + str(self.race_number), index_col=0)\n",
+    "\n",
+    "    def get_race_results(self):\n",
+    "        return self.race_results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Race at 0x1b3ba3e14f0>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race = Race(1)\n",
+    "race"
    ]
   },
   {
